const_typed_builder_test/compile_fail/group_at_least_2.stderr
error[E0599]: no method named `bar` found for struct `FooBuilder<true, false, false>` in the current scope
  --> ./compile_fail/group_at_least_2.rs:15:55
   |
4  |     #[derive(Debug, Default, PartialEq, Eq, Builder)]
   |                                             ------- method `bar` not found for this struct
...
15 |     let foo = Foo::builder().bar("Hello".to_string()).bar("Hello".to_string()).qux("world!".to_string()).build();
   |                                                       ^^^ help: there is a method with a similar name: `baz`
